Style: Actualización de vista html practicario.

--- a/src/main/webapp/app/courses/practitioner/practitioner.component.html
+++ b/src/main/webapp/app/courses/practitioner/practitioner.component.html
@@ -6,20 +6,75 @@
             <div class="logo-pp"></div>
           </div>
           <div class="r-2">
-            <a id="cerrar-libro" class="btn-close-pract" href="/"></a>
+            <a id="cerrar-libro" class="btn-close-pract" href="/main"></a>
           </div>
         </div>
       </div>
 
       <div class="home-pract">
-        <div class="sidebar-pract"></div>
+        <!-- Sidebar -->
+        <div class="sidebar-pract">
+          <div class="item-sidebar">
+            <div class="row-itemsb">
+              <div class="title"><p>Temas</p></div>
+
+              <!-- Start link act sidebar  -->
+              <div class="link-menu-act">
+                <div class="it1">
+                  <label class="btn-check-pract">
+            				<input type="checkbox"  checked>
+            				<span></span>
+            			</label>
+                  <span class="icn-linkpract"></span>
+                </div>
+                <div class="it2"><p>Suma</p></div>
+              </div>
+              <!-- End link act sidebar  -->
+
+            </div>
+
+          </div>
+          <div class="item-sidebar">
+            <div class="shadow-sb"></div>
+            <div class="row-itemsb">
+              <div class="link-sb"><span class="icn-1-ptact"></span><p>Legales</p></div>
+              <div class="link-sb"><span class="icn-2-ptact"></span><p>Extras</p></div>
+            </div>
+          </div>
+          <div class="item-sidebar">
+            <div class="row-itemsb">
+              <p>Mi avance global</p>
+            </div>
+          </div>
+          <div class="line-sidebar"></div>
+        </div>
+
+        <!-- Content -->
         <div class="content-menu-pract">
           <div class="row">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti voluptate, debitis culpa nobis nulla commodi. Cupiditate nihil quas placeat veniam?</p>
+            <div class="row-title-btnpract">
+              <div class="item-tp">
+                <span></span>
+                <p>Suma</p>
+              </div>
+              <div class="item-tp"></div>
+            </div>
+
+            <!-- Start link act main content pract  -->
+            <div class="btn-pract" id="12z0n0" routerLink="/practitioner/component" routerLinkActive="active">
+              <div class="item-p">
+                <div class="number-btn-pract">1</div>
+              </div>
+              <div class="item-p">
+                <p>Suma <strong>Básico</strong></p>
+              </div>
+              <div class="item-p"></div>
+            </div>
+            <!-- End link act main content pract  -->
+
           </div>
         </div>
 
       </div>
-
 
 </div>
