Style: Diseño de home temporal responsivo

--- a/src/main/webapp/app/courses/practitioner/practitioner.component.scss
+++ b/src/main/webapp/app/courses/practitioner/practitioner.component.scss
@@ -778,7 +778,9 @@ b {
       z-index: 1;
 
       &:nth-child(2) {
-        flex-direction: row;
+        @include smartphone {
+          flex-direction: row;
+        }
       }
 
       .title {
