--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,3 +1,42 @@
-<div class="row">
-  
+<div class="container-home-n">
+  <div class="slider-home-n"></div>
+
+  <div class="row-three-home">
+    <div class="row">
+      <div class="item-th item-th-color1">
+        <div class="i1"><div class="circle"></div></div>
+        <div class="i2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, reprehenderit?</p></div>
+      </div>
+      <div class="item-th">
+        <div class="i1"><div class="circle"></div></div>
+        <div class="i2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, reprehenderit?</p></div>
+      </div>
+      <div class="item-th item-th-color3">
+        <div class="i1"><div class="circle"></div></div>
+        <div class="i2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, reprehenderit?</p></div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="row-hn">
+    <div class="item-hn">
+      <h2>Lorem ipsum dolor</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur deserunt, recusandae obcaecati ex dolores at exercitationem ratione iste quidem vitae soluta ducimus libero a repellendus assumenda ad nostrum pariatur nesciunt.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur deserunt, recusandae obcaecati ex dolores at exercitationem ratione iste quidem vitae soluta ducimus libero a repellendus assumenda ad nostrum pariatur nesciunt.</p>
+    </div>
+    <div class="item-hn">
+      <div class="img-hn"></div>
+    </div>
+  </div>
+
+
+  <div class="space-end-home"></div>
+  <div class="footer-home">
+    <div class="row-footer">
+      <div class="logo-footer-home"></div>
+      <span>Copyright © 2020 Todos los derechos reservados.</span>
+    </div>
+  </div>
 </div>
