Style: Se actualiza vista de actividad suma practicario.

--- a/src/main/webapp/app/courses/practitioner/practitioner.component.scss
+++ b/src/main/webapp/app/courses/practitioner/practitioner.component.scss
@@ -632,6 +632,7 @@ b {
 .row-topbar-p {
   position: relative;
   width: 90%;
+  max-width: 1200px;
   height: 100%;
   display: flex;
   justify-content: center;
